# stockroom

./: .bumpversion.cfg  .coveragerc  .deepsource.toml  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions_and_documentation.md
.github/workflows/: build-docs.yml  publish-docs.yml  test-docs.yml  test.yml
docs/: CNAME  Makefile  api.rst  changelog.md  cli.md  cli.rst  conf.py  contributing.md  git-workflow.rst  help-us.md  index.md  index.rst  installation.rst  make.bat  quick-start.md  requirements.txt  tutorial.rst
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/js/: chat.js  custom.js
docs/stylesheets/: extra.css  termynal.css
examples/: dataset_configs.py  pytorch_to_stockroom_loader.py  requirements.txt  with-git.ipynb  with-hangar.ipynb
scripts/: build_docs.sh  test.sh
stockroom/: __init__.py  cli.py  console.py  core.py  diff.py  keeper.py  main.py  parser.py  repository.py  utils.py
stockroom/download/: __init__.py  pytorch_datasetloader.py  torchvision_datasets.py
stockroom/storages/: __init__.py  data.py  datastore.py  experiment.py  generic.py  metricstore.py  model.py  modelstore.py  param.py  paramstore.py  storagebase.py  tag.py
tests/: .gitignore  conftest.py  test_cli.py  test_console.py  test_data.py  test_experiment.py  test_genericstore.py  test_model.py  test_modelstore.py  test_multiple_instances.py  test_paramstore.py  test_repository.py  test_tag.py  test_torchvision_importer.py  test_utils.py  torchvision_mocks.py
tests/importer/: conftest.py  test_torchvision.py  torchvision_datasets.py
