[build-system]

requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
known_third_party = ["stockroom", "hangar"]


[tool.coverage.paths]
source = ["stockroom"]


[tool.coverage.run]
branch = true
source = ["stockroom", "tests"]
parallel = true


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "def __repr__",
    "def _repr_pretty_",
    "def _ipython_key_completions_"]
show_missing = true
precision = 2
